--- a/Run3_Resolution_Scripts/config/varlist.yaml
+++ b/Run3_Resolution_Scripts/config/varlist.yaml
@@ -13,10 +13,13 @@ mu2_phi: [25, -3.14, 3.14, "Sub-leading Muon #phi", 0.8, 1.2]
 dimuon_pt: [50, 0, 60, "p_{T} (#mu#mu) [GeV]", 0.95, 1.05]
 dimuon_eta: [50, -4.7, 4.7, "#eta_{#mu#mu}", 0.95, 1.05]
 dimuon_phi: [25, -3.14, 3.14, "#phi_{#mu#mu}", 0.95, 1.05]
-dimuon_mass: [50, 70, 110, "m_{#mu#mu} [GeV]", 0.8, 1.2]
+dimuon_mass: [50, 110, 150, "m_{#mu#mu} [GeV]", 0.8, 1.2]
 # dimuon_mass: [50, 70, 110, "m_{#mu#mu} [GeV]", 0.8, 1.2, "z-peak"]
 # dimuon_mass: [50, 110, 150, "m_{#mu#mu} [GeV]", 0.8, 1.2, "signal"]
 # dimuon_mass: [50, 115.03, 135.03, "m_{#mu#mu} [GeV]", 0.8, 1.2, "h-peak"]
 dimuon_ebe_mass_res_rel: [25, 0, 0.12, "m_{#mu#mu} Resolution", 0.0, 2.0]
+dimuon_dEta: [50, 0, 3.5, "#Delta#eta(#mu#mu)",0.90,1.10]
+dimuon_dPhi: [50, 0, 3.14, "#Delta#phi(#mu#mu)",0.90,1.10]
+dimuon_dR: [50, 0, 4.5, "#Delta R(#mu#mu)",0.90,1.10]
 
 default: [50, 0, 300, "variable", 0.0, 2.0]
