Added Fatjet variables & few other improvements (#63)
* - Improved z-pt weight code (#12)
- Updated z-pt weight info in copperhead_processor

* Update EBE calibration for 2018 #10

* - time profiling in the copperhead
- Added mJJ cut at GEN level for DY samples if needed
- Generalised the validation plotter by adding additional argumens for z-pt and njets info
- few other plotter

* suggested update from GitHub

* updated 2018 z-pt reweight Improve the Z-pT weight #12

* - Updated DY sample list in v12 yaml file
- updated cross-section values
- Added plotting script to compare inclusive dy with VBFfilter Dy
- Moved validation plotter inside the Plotter directory
- removed some obselete plotting code

* Updated docs

* Improve and fix plotter

* - In prestage added the protection that if there are no files for a dataset then jump to next dataset.
- update plot_settings json file

* - aMCatNLO DY: Added separate Z-pT weight for aMCatNLO sample
- Added missing top and diboson samples in v12 yaml file
- Updated plotting code from Hyeon update #24

* updated docs and stage2_vbf code

* Updated the stage3 scripts

* updated validation plotter

* - added logger to the dnn code
- in dnn code added `plt.close(fig)` to release the memory

* minor update and bugfixes (for dnn .plt(fig) thing)

* BugFix: revert the leading jet pT cut to 35 GeV

* Added stiching validation code for DY

* - Added script to find the missing branch,also updated the doc file

* Update Additional_Scripts.rst

* updated 2016 postVFP weights

* Added 2016preVFP z-pt weights

* Updated ZpT weights for MiNNLO samples 2017 #12

* minor updates: argument list, updated names and zpt weight file names

* - removed unwanted files related to z-pt reweight
- updated SF filelist.yaml
- improved plotter based on latest version of Heyon's code

* Reomved unused ROOT-style option from validation plotter

* Updated v12 sample lists

* - minor improvements in plotter and plotting scripts
- bugfix in stage1_loop_Impro

--- a/configs/datasets/dataset_nanoAODv12_hadded.yaml
+++ b/configs/datasets/dataset_nanoAODv12_hadded.yaml
@@ -1,8 +1,6 @@
 years:
     "2022preEE":
         Data:
-            # data_C_single: /Muon/Run2022C-16Dec2023-v1/NANOAOD
-            # data_C: /Muon/Run2022C-16Dec2023-v1/NANOAOD
             data_C:
                 - /Muon/Run2022C-16Dec2023-v1/NANOAOD
                 - /SingleMuon/Run2022C-16Dec2023-v1/NANOAOD
@@ -62,6 +60,14 @@ years:
         Higgs:
             ggh_powhegPS: /GluGluHto2Mu_M-125_TuneCP5_13p6TeV_powheg-pythia8/Run3Summer22EENanoAODv12-130X_mcRun3_2022_realistic_postEE_v6-v1/NANOAODSIM
             vbf_powheg_dipole: /VBFHto2Mu_M-125_TuneCP5_withDipoleRecoil_13p6TeV_powheg-pythia8/Run3Summer22EENanoAODv12-130X_mcRun3_2022_realistic_postEE_v6-v3/NANOAODSIM
+    "2018PR":
+        Data:
+            data_A: /depot/cms/hmm/shar1172/Small_NanoAOD_ForValidtionPR/UL2018/SingleMuon_Run2018A
+        DY:
+            dy_M-100To200_aMCatNLO: /depot/cms/hmm/shar1172/Small_NanoAOD_ForValidtionPR/UL2018/DYJetsToLL_M-100to200_TuneCP5_13TeV-amcatnloFXFX-pythia8
+        Higgs:
+            vbf_powheg_dipole: /depot/cms/hmm/shar1172/Small_NanoAOD_ForValidtionPR/UL2018/VBFHToMuMu_M125_TuneCP5_withDipoleRecoil_13TeV-powheg-pythia8
+            ggh_powhegPS: /depot/cms/hmm/shar1172/Small_NanoAOD_ForValidtionPR/UL2018/GluGluHToMuMu_M125_TuneCP5_13TeV-powheg-pythia8
     "2018":
         Data:
             # data_A: /eos/purdue/store/user/rasharma/Run2_CustomNanoAODv12/haddedv2/UL2018/SingleMuon_Run2018A
